[package]
name = "cdpt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
arrayvec = "0.7.6"
cdpt-derive = { path = "cdpt-derive" }
cfg-if = "1.0.1"
crossbeam = "0.8.4"
fastrand = "2.3.0"
libc = "0.2.174"
rustc-hash = "2.1.1"
windows-sys = "0.60.2"
static_assertions = "1.1.0"

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.30"

[dev-dependencies]
bitflags = "2.5"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dev-dependencies]
tikv-jemallocator = "0.5"
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }

[features]
tag = []

[[example]]
name = "lists"
required-features = ["tag"]

[[example]]
name = "efrb_tree"
required-features = ["tag"]

[[example]]
name = "natarajan_mittal_tree"
required-features = ["tag"]

[[example]]
name = "bench"
required-features = ["tag"]
