[package]
name = "cdpt-derive"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Derive macro for the TraceObj trait of the cdpt garbage collector."
repository = "https://github.com/kaist-cp/cdpt"
documentation = "https://docs.rs/cdpt"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "derive"] }
proc-macro2 = "1.0"
